--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -80,6 +80,18 @@ jobs:
     - name: Make envfile
       uses: SpicyPizza/create-envfile@v1
       with:
+        envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        envkey_POCKET_NETWORK_MAIN_FUND_ACCOUNT: ${{ secrets.POCKET_NETWORK_MAIN_FUND_ACCOUNT }}
+        envkey_POCKET_NETWORK_MAIN_FUND_ADDRESS: ${{ secrets.POCKET_NETWORK_MAIN_FUND_ADDRESS }}
+        envkey_JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+        envkey_envkey_AUTH_PROVIDER_GITHUB_CLIENT_ID: ${{ secrets.AUTH_PROVIDER_GITHUB_CLIENT_ID }}
+        envkey_AUTH_PROVIDER_GITHUB_CLIENT_SECRET: ${{ secrets.AUTH_PROVIDER_GITHUB_CLIENT_SECRET }}
+        envkey_AUTH_PROVIDER_GOOGLE_CLIENT_ID: ${{ secrets.AUTH_PROVIDER_GOOGLE_CLIENT_ID }}
+        envkey_AUTH_PROVIDER_GOOGLE_CLIENT_SECRET: ${{ secrets.AUTH_PROVIDER_GOOGLE_CLIENT_SECRET }}
+        envkey_PAYMENT_DEFAULT_CLIENT_ID: ${{ secrets.PAYMENT_DEFAULT_CLIENT_ID }}
+        envkey_PAYMENT_DEFAULT_CLIENT_SECRET: ${{ secrets.PAYMENT_DEFAULT_CLIENT_SECRET }}
+        envkey_EMAIL_API_KEY: ${{ secrets.EMAIL_API_KEY }}
+        envkey_RECAPTCHA_SERVER_SECRET: ${{ secrets.RECAPTCHA_SERVER_SECRET }}
         envkey_DATABASE_NAME: gateway-testnet
         envkey_POCKET_NETWORK_MAX_DISPATCHER: 7
         envkey_POCKET_NETWORK_REQUEST_TIMEOUT: 60000
